--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "joblib>=1.5.2",
     "pandas>=2.3.3",
     "pymysql>=1.1.2",
+    "python-dotenv>=1.2.1",
     "sqlacodegen>=3.0.0",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.37.0",
